# external-explorer

./: .gitignore  README.md  package-lock.json  package.json  selene.toml  tsconfig.json  vite.config.ts
src/: App.tsx  instances.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs  websocket.rs
src-tauri/src/explorer/: mod.rs
src/components/atoms/: classIcon.tsx  icon.tsx  textBox.tsx
src/components/molecules/: buttonIcon.tsx  collapsedArrow.tsx  filterSearch.tsx
src/components/organisms/: category.tsx  instance.tsx  list.tsx  property.tsx
src/components/organisms/properties/: base.tsx  index.tsx  string.tsx  vector3.tsx
src/components/pages/: explorer.tsx  properties.tsx
src/components/templates/: explorer.tsx  properties.tsx
tests/: pprint.lua  websocket.lua
